navbar z-index 2.0 issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -476,6 +476,7 @@ opacity: 0.4;
 }
 main div h1{
   letter-spacing: 4px;
+  font-size: 29px;
 }
 #hamburger-menu {
   display: block;
@@ -647,6 +648,12 @@ main div h1{
 @media screen and (max-width: 750px) {
   nav ul{
     display: block;
+  }
+  .btn-box a{
+    z-index: -1;
+  }
+  footer{
+    z-index: -1;
   }
  
   .hover-underline-animation {
